[package]
name = "submission_receiver"
version = "0.1.0"
edition = "2021"
description = "Control Plane Step 1 – Submission Receiver API for the IICPC Benchmarking Platform"

[dependencies]
actix-web = "4"
actix-multipart = "0.7"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures-util = { version = "0.3", features = ["sink"] }
bollard = "0.17"
async_zip = { version = "0.0.17", features = ["full"] }
tokio-tar = "0.3"
tokio-util = { version = "0.7", features = ["compat"] }
mime = "0.3"
env_logger = "0.11"
log = "0.4"
